# data-analysis-crew

./: .gitignore  call.py  dashboard.py  pyproject.toml
src/data_analysis_crew/: crew.py  main.py  schemas.py  settings.py
src/data_analysis_crew/config/: agents.yaml  tasks.yaml
src/data_analysis_crew/tools/: __init__.py  build_predictive_model_tool.py  clean_data.py  dashboard_launcher_tool.py  explore_data_tool.py  install_dependency_tool.py  launch_dashboard_tool.py  test_path_resolution.py
src/data_analysis_crew/utils/: instructions.py  project_root.py  utils.py
