[project]
name = "data_analysis_crew"
version = "0.1.0"
description = "data_analysis_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
data_analysis_crew = "data_analysis_crew.main:run"
run_crew = "data_analysis_crew.main:run"
train = "data_analysis_crew.main:train"
replay = "data_analysis_crew.main:replay"
test = "data_analysis_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
