[project]
name            = "data_analysis_crew"
version         = "0.1.0"
description     = "An agentic data-analysis pipeline built with CrewAI."
requires-python = ">=3.10, <3.13"
readme          = "README.md"
license         = "MIT"

# --- Runtime deps -----------------------------------------------------------
dependencies = [
    "crewai[tools] >=0.121.0, <1.0.0",
    "pandas >=1.5",
    "numpy >=1.23",
    "scikit-learn >=1.3",
    "matplotlib >=3.7",
    "seaborn >=0.13",
    "shap",
    "streamlit >=1.31.0, <2.0.0"
]

# --- CLI entry-points -------------------------------------------------------
[project.scripts]
run_crew      = "data_analysis_crew.main:run"
train         = "data_analysis_crew.main:train"
replay        = "data_analysis_crew.main:replay"
test          = "data_analysis_crew.main:test"
run_dashboard = "dashboard:__main__"

# --- Optional / dev extras --------------------------------------------------
[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "ipykernel",
    "pytest",
    "streamlit"
]

# --- Build backend ----------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Package / build rules --------------------------------------------------
[tool.hatch.build]
# Exclude large artefacts & data that should not ship to PyPI
exclude = [
    "/output/**",
    "/knowledge/**",
    "/db/**",
    "/.venv/**",
]

# --- CrewAI -----------------------------------------------------------------
[tool.crewai]
entrypoint = "src.data_analysis_crew.main"
type = "crew"
